Assignment2/Task3/y.output
Terminals unused in grammar

    INVALID_TOKEN


Grammar

    0 $accept: stmt $end

    1 $@1: ε

    2 stmt: $@1 PROGRAM_DECLARATION VARIABLE_DECLARATION BODY_OF_PROGRAM

    3 DATATYPE: INTEGER
    4         | REAL
    5         | BOOLEAN
    6         | CHAR

    7 RELOP: EQUAL
    8      | NOTEQUAL
    9      | LESS
   10      | LESSEQUAL
   11      | GREATER
   12      | GREATEREQUAL

   13 ARRAY_ADD_ON_ID: LBRACKET BETWEEN_BRACKETS RBRACKET

   14 BETWEEN_BRACKETS: INT_NUMBER
   15                 | IDENTIFIER
   16                 | IDENTIFIER ARRAY_ADD_ON_ID

   17 PROGRAM_DECLARATION: PROGRAM IDENTIFIER SEMICOLON

   18 VARIABLE_DECLARATION: VAR DECLARATION_LISTS
   19                     | VAR

   20 DECLARATION_LISTS: DECLARATION_LIST DECLARATION_LISTS
   21                  | DECLARATION_LIST

   22 DECLARATION_LIST: SINGLE_VARIABLE
   23                 | MULTIPLE_VARIABLE
   24                 | ARRAY_DECLARATION

   25 SINGLE_VARIABLE: IDENTIFIER COLON DATATYPE SEMICOLON

   26 MULTIPLE_VARIABLE: IDENTIFIER MORE_IDENTIFIERS COLON DATATYPE SEMICOLON

   27 MORE_IDENTIFIERS: COMMA IDENTIFIER MORE_IDENTIFIERS
   28                 | COMMA IDENTIFIER

   29 ARRAY_DECLARATION: IDENTIFIER COLON ARRAY LBRACKET INT_NUMBER ARRAY_DOT INT_NUMBER RBRACKET OF DATATYPE SEMICOLON

   30 BODY_OF_PROGRAM: BEGINK STATEMENTS END DOT

   31 STATEMENTS: STATEMENT STATEMENTS
   32           | STATEMENT

   33 STATEMENT: READ_STATEMENT
   34          | WRITE_STATEMENT
   35          | ASSIGNMENT_STATEMENT
   36          | CONDITIONAL_STATEMENT
   37          | LOOPING_STATEMENT

   38 READ_STATEMENT: READ LPAREN IDENTIFIER RPAREN SEMICOLON
   39               | READ LPAREN IDENTIFIER ARRAY_ADD_ON_ID RPAREN SEMICOLON

   40 WRITE_STATEMENT: WRITE LPAREN WRITE_IDENTIFIER_LIST RPAREN SEMICOLON
   41                | WRITE_LN LPAREN WRITE_IDENTIFIER_LIST RPAREN SEMICOLON

   42 WRITE_IDENTIFIER_LIST: IDENTIFIER
   43                      | IDENTIFIER WRITE_MORE_IDENTIFIERS
   44                      | IDENTIFIER ARRAY_ADD_ON_ID
   45                      | IDENTIFIER ARRAY_ADD_ON_ID WRITE_MORE_IDENTIFIERS
   46                      | STRING
   47                      | STRING WRITE_MORE_IDENTIFIERS
   48                      | INT_NUMBER
   49                      | INT_NUMBER WRITE_MORE_IDENTIFIERS
   50                      | DECIMAL_NUMBER
   51                      | DECIMAL_NUMBER WRITE_MORE_IDENTIFIERS
   52                      | CHARACTER
   53                      | CHARACTER WRITE_MORE_IDENTIFIERS

   54 WRITE_MORE_IDENTIFIERS: COMMA IDENTIFIER
   55                       | COMMA IDENTIFIER WRITE_MORE_IDENTIFIERS
   56                       | COMMA IDENTIFIER ARRAY_ADD_ON_ID
   57                       | COMMA IDENTIFIER ARRAY_ADD_ON_ID WRITE_MORE_IDENTIFIERS
   58                       | COMMA STRING
   59                       | COMMA STRING WRITE_MORE_IDENTIFIERS
   60                       | COMMA INT_NUMBER
   61                       | COMMA INT_NUMBER WRITE_MORE_IDENTIFIERS
   62                       | COMMA DECIMAL_NUMBER
   63                       | COMMA DECIMAL_NUMBER WRITE_MORE_IDENTIFIERS
   64                       | COMMA CHARACTER
   65                       | COMMA CHARACTER WRITE_MORE_IDENTIFIERS

   66 ASSIGNMENT_STATEMENT: IDENTIFIER COLON EQUAL ANY_EXPRESSION SEMICOLON
   67                     | IDENTIFIER ARRAY_ADD_ON_ID COLON EQUAL ANY_EXPRESSION SEMICOLON
   68                     | IDENTIFIER COLON EQUAL CHARACTER SEMICOLON

   69 CONDITIONAL_STATEMENT: IF ANY_EXPRESSION THEN BODY_OF_CONDITIONAL ELSE BODY_OF_CONDITIONAL SEMICOLON
   70                      | IF ANY_EXPRESSION THEN BODY_OF_CONDITIONAL SEMICOLON

   71 BODY_OF_CONDITIONAL: BEGINK STATEMENTS_INSIDE_CONDITIONAL END

   72 STATEMENTS_INSIDE_CONDITIONAL: STATEMENT_INSIDE_CONDITIONAL STATEMENTS_INSIDE_CONDITIONAL
   73                              | STATEMENT_INSIDE_CONDITIONAL

   74 ANY_EXPRESSION: EXPRESSION_SEQUENCE
   75               | EXPRESSION_SEQUENCE RELOP EXPRESSION_SEQUENCE
   76               | LPAREN EXPRESSION_SEQUENCE RELOP EXPRESSION_SEQUENCE RPAREN
   77               | BOOLEAN_EXPRESSION_SEQUENCE

   78 EXPRESSION_SEQUENCE: TERM
   79                    | EXPRESSION_SEQUENCE PLUS EXPRESSION_SEQUENCE
   80                    | EXPRESSION_SEQUENCE MINUS EXPRESSION_SEQUENCE
   81                    | EXPRESSION_SEQUENCE MULTIPLY EXPRESSION_SEQUENCE
   82                    | EXPRESSION_SEQUENCE DIVIDE EXPRESSION_SEQUENCE
   83                    | EXPRESSION_SEQUENCE MOD EXPRESSION_SEQUENCE
   84                    | MINUS EXPRESSION_SEQUENCE
   85                    | LPAREN EXPRESSION_SEQUENCE RPAREN

   86 BOOLEAN_EXPRESSION_SEQUENCE: NOT ANY_EXPRESSION
   87                            | ANY_EXPRESSION AND ANY_EXPRESSION
   88                            | ANY_EXPRESSION OR ANY_EXPRESSION
   89                            | LPAREN BOOLEAN_EXPRESSION_SEQUENCE RPAREN

   90 TERM: IDENTIFIER
   91     | IDENTIFIER ARRAY_ADD_ON_ID
   92     | INT_NUMBER
   93     | DECIMAL_NUMBER

   94 STATEMENT_INSIDE_CONDITIONAL: READ_STATEMENT
   95                             | WRITE_STATEMENT
   96                             | ASSIGNMENT_STATEMENT
   97                             | LOOPING_STATEMENT

   98 LOOPING_STATEMENT: WHILE_LOOP
   99                  | FOR_LOOP_TO
  100                  | FOR_LOOP_DOWNTO

  101 WHILE_LOOP: WHILE ANY_EXPRESSION DO BODY_OF_LOOP SEMICOLON

  102 FOR_LOOP_TO: FOR IDENTIFIER COLON EQUAL EXPRESSION_SEQUENCE TO EXPRESSION_SEQUENCE DO BODY_OF_LOOP SEMICOLON

  103 FOR_LOOP_DOWNTO: FOR IDENTIFIER COLON EQUAL EXPRESSION_SEQUENCE DOWNTO EXPRESSION_SEQUENCE DO BODY_OF_LOOP SEMICOLON

  104 BODY_OF_LOOP: BEGINK STATEMENTS_INSIDE_LOOP END

  105 STATEMENTS_INSIDE_LOOP: STATEMENT_INSIDE_LOOP STATEMENTS_INSIDE_LOOP
  106                       | STATEMENT_INSIDE_LOOP

  107 STATEMENT_INSIDE_LOOP: READ_STATEMENT
  108                      | WRITE_STATEMENT
  109                      | ASSIGNMENT_STATEMENT
  110                      | CONDITIONAL_STATEMENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 17
    INTEGER (259) 3
    REAL (260) 4
    BEGINK (261) 30 71 104
    END (262) 30 71 104
    BOOLEAN (263) 5
    CHAR (264) 6
    IF (265) 69 70
    ELSE (266) 69
    TO (267) 102
    DOWNTO (268) 103
    VAR (269) 18 19
    ARRAY (270) 29
    FOR (271) 102 103
    WHILE (272) 101
    DO (273) 101 102 103
    NOT (274) 86
    AND (275) 87
    OR (276) 88
    READ (277) 38 39
    WRITE (278) 40
    WRITE_LN (279) 41
    ARRAY_DOT (280) 29
    PLUS (281) 79
    MINUS (282) 80 84
    MULTIPLY (283) 81
    DIVIDE (284) 82
    MOD (285) 83
    EQUAL (286) 7 66 67 68 102 103
    LESS (287) 9
    GREATER (288) 11
    LESSEQUAL (289) 10
    GREATEREQUAL (290) 12
    NOTEQUAL (291) 8
    INT_NUMBER (292) 14 29 48 49 60 61 92
    DECIMAL_NUMBER (293) 50 51 62 63 93
    IDENTIFIER (294) 15 16 17 25 26 27 28 29 38 39 42 43 44 45 54 55 56 57 66 67 68 90 91 102 103
    SEMICOLON (295) 17 25 26 29 38 39 40 41 66 67 68 69 70 101 102 103
    COMMA (296) 27 28 54 55 56 57 58 59 60 61 62 63 64 65
    COLON (297) 25 26 29 66 67 68 102 103
    DOT (298) 30
    LPAREN (299) 38 39 40 41 76 85 89
    RPAREN (300) 38 39 40 41 76 85 89
    LBRACKET (301) 13 29
    RBRACKET (302) 13 29
    STRING (303) 46 47 58 59
    THEN (304) 69 70
    OF (305) 29
    INVALID_TOKEN (306)
    CHARACTER (307) 52 53 64 65 68


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    stmt (54)
        on left: 2
        on right: 0
    $@1 (55)
        on left: 1
        on right: 2
    DATATYPE (56)
        on left: 3 4 5 6
        on right: 25 26 29
    RELOP (57)
        on left: 7 8 9 10 11 12
        on right: 75 76
    ARRAY_ADD_ON_ID (58)
        on left: 13
        on right: 16 39 44 45 56 57 67 91
    BETWEEN_BRACKETS (59)
        on left: 14 15 16
        on right: 13
    PROGRAM_DECLARATION (60)
        on left: 17
        on right: 2
    VARIABLE_DECLARATION (61)
        on left: 18 19
        on right: 2
    DECLARATION_LISTS (62)
        on left: 20 21
        on right: 18 20
    DECLARATION_LIST (63)
        on left: 22 23 24
        on right: 20 21
    SINGLE_VARIABLE (64)
        on left: 25
        on right: 22
    MULTIPLE_VARIABLE (65)
        on left: 26
        on right: 23
    MORE_IDENTIFIERS (66)
        on left: 27 28
        on right: 26 27
    ARRAY_DECLARATION (67)
        on left: 29
        on right: 24
    BODY_OF_PROGRAM (68)
        on left: 30
        on right: 2
    STATEMENTS (69)
        on left: 31 32
        on right: 30 31
    STATEMENT (70)
        on left: 33 34 35 36 37
        on right: 31 32
    READ_STATEMENT (71)
        on left: 38 39
        on right: 33 94 107
    WRITE_STATEMENT (72)
        on left: 40 41
        on right: 34 95 108
    WRITE_IDENTIFIER_LIST (73)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 40 41
    WRITE_MORE_IDENTIFIERS (74)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 43 45 47 49 51 53 55 57 59 61 63 65
    ASSIGNMENT_STATEMENT (75)
        on left: 66 67 68
        on right: 35 96 109
    CONDITIONAL_STATEMENT (76)
        on left: 69 70
        on right: 36 110
    BODY_OF_CONDITIONAL (77)
        on left: 71
        on right: 69 70
    STATEMENTS_INSIDE_CONDITIONAL (78)
        on left: 72 73
        on right: 71 72
    ANY_EXPRESSION (79)
        on left: 74 75 76 77
        on right: 66 67 69 70 86 87 88 101
    EXPRESSION_SEQUENCE (80)
        on left: 78 79 80 81 82 83 84 85
        on right: 74 75 76 79 80 81 82 83 84 85 102 103
    BOOLEAN_EXPRESSION_SEQUENCE (81)
        on left: 86 87 88 89
        on right: 77 89
    TERM (82)
        on left: 90 91 92 93
        on right: 78
    STATEMENT_INSIDE_CONDITIONAL (83)
        on left: 94 95 96 97
        on right: 72 73
    LOOPING_STATEMENT (84)
        on left: 98 99 100
        on right: 37 97
    WHILE_LOOP (85)
        on left: 101
        on right: 98
    FOR_LOOP_TO (86)
        on left: 102
        on right: 99
    FOR_LOOP_DOWNTO (87)
        on left: 103
        on right: 100
    BODY_OF_LOOP (88)
        on left: 104
        on right: 101 102 103
    STATEMENTS_INSIDE_LOOP (89)
        on left: 105 106
        on right: 104 105
    STATEMENT_INSIDE_LOOP (90)
        on left: 107 108 109 110
        on right: 105 106


State 0

    0 $accept: • stmt $end

    $default  reduce using rule 1 ($@1)

    stmt  go to state 1
    $@1   go to state 2


State 1

    0 $accept: stmt • $end

    $end  shift, and go to state 3


State 2

    2 stmt: $@1 • PROGRAM_DECLARATION VARIABLE_DECLARATION BODY_OF_PROGRAM

    PROGRAM  shift, and go to state 4

    PROGRAM_DECLARATION  go to state 5


State 3

    0 $accept: stmt $end •

    $default  accept


State 4

   17 PROGRAM_DECLARATION: PROGRAM • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 6


State 5

    2 stmt: $@1 PROGRAM_DECLARATION • VARIABLE_DECLARATION BODY_OF_PROGRAM

    VAR  shift, and go to state 7

    VARIABLE_DECLARATION  go to state 8


State 6

   17 PROGRAM_DECLARATION: PROGRAM IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 9


State 7

   18 VARIABLE_DECLARATION: VAR • DECLARATION_LISTS
   19                     | VAR •

    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 19 (VARIABLE_DECLARATION)

    DECLARATION_LISTS  go to state 11
    DECLARATION_LIST   go to state 12
    SINGLE_VARIABLE    go to state 13
    MULTIPLE_VARIABLE  go to state 14
    ARRAY_DECLARATION  go to state 15


State 8

    2 stmt: $@1 PROGRAM_DECLARATION VARIABLE_DECLARATION • BODY_OF_PROGRAM

    BEGINK  shift, and go to state 16

    BODY_OF_PROGRAM  go to state 17


State 9

   17 PROGRAM_DECLARATION: PROGRAM IDENTIFIER SEMICOLON •

    $default  reduce using rule 17 (PROGRAM_DECLARATION)


State 10

   25 SINGLE_VARIABLE: IDENTIFIER • COLON DATATYPE SEMICOLON
   26 MULTIPLE_VARIABLE: IDENTIFIER • MORE_IDENTIFIERS COLON DATATYPE SEMICOLON
   29 ARRAY_DECLARATION: IDENTIFIER • COLON ARRAY LBRACKET INT_NUMBER ARRAY_DOT INT_NUMBER RBRACKET OF DATATYPE SEMICOLON

    COMMA  shift, and go to state 18
    COLON  shift, and go to state 19

    MORE_IDENTIFIERS  go to state 20


State 11

   18 VARIABLE_DECLARATION: VAR DECLARATION_LISTS •

    $default  reduce using rule 18 (VARIABLE_DECLARATION)


State 12

   20 DECLARATION_LISTS: DECLARATION_LIST • DECLARATION_LISTS
   21                  | DECLARATION_LIST •

    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 21 (DECLARATION_LISTS)

    DECLARATION_LISTS  go to state 21
    DECLARATION_LIST   go to state 12
    SINGLE_VARIABLE    go to state 13
    MULTIPLE_VARIABLE  go to state 14
    ARRAY_DECLARATION  go to state 15


State 13

   22 DECLARATION_LIST: SINGLE_VARIABLE •

    $default  reduce using rule 22 (DECLARATION_LIST)


State 14

   23 DECLARATION_LIST: MULTIPLE_VARIABLE •

    $default  reduce using rule 23 (DECLARATION_LIST)


State 15

   24 DECLARATION_LIST: ARRAY_DECLARATION •

    $default  reduce using rule 24 (DECLARATION_LIST)


State 16

   30 BODY_OF_PROGRAM: BEGINK • STATEMENTS END DOT

    IF          shift, and go to state 22
    FOR         shift, and go to state 23
    WHILE       shift, and go to state 24
    READ        shift, and go to state 25
    WRITE       shift, and go to state 26
    WRITE_LN    shift, and go to state 27
    IDENTIFIER  shift, and go to state 28

    STATEMENTS             go to state 29
    STATEMENT              go to state 30
    READ_STATEMENT         go to state 31
    WRITE_STATEMENT        go to state 32
    ASSIGNMENT_STATEMENT   go to state 33
    CONDITIONAL_STATEMENT  go to state 34
    LOOPING_STATEMENT      go to state 35
    WHILE_LOOP             go to state 36
    FOR_LOOP_TO            go to state 37
    FOR_LOOP_DOWNTO        go to state 38


State 17

    2 stmt: $@1 PROGRAM_DECLARATION VARIABLE_DECLARATION BODY_OF_PROGRAM •

    $default  reduce using rule 2 (stmt)


State 18

   27 MORE_IDENTIFIERS: COMMA • IDENTIFIER MORE_IDENTIFIERS
   28                 | COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 39


State 19

   25 SINGLE_VARIABLE: IDENTIFIER COLON • DATATYPE SEMICOLON
   29 ARRAY_DECLARATION: IDENTIFIER COLON • ARRAY LBRACKET INT_NUMBER ARRAY_DOT INT_NUMBER RBRACKET OF DATATYPE SEMICOLON

    INTEGER  shift, and go to state 40
    REAL     shift, and go to state 41
    BOOLEAN  shift, and go to state 42
    CHAR     shift, and go to state 43
    ARRAY    shift, and go to state 44

    DATATYPE  go to state 45


State 20

   26 MULTIPLE_VARIABLE: IDENTIFIER MORE_IDENTIFIERS • COLON DATATYPE SEMICOLON

    COLON  shift, and go to state 46


State 21

   20 DECLARATION_LISTS: DECLARATION_LIST DECLARATION_LISTS •

    $default  reduce using rule 20 (DECLARATION_LISTS)


State 22

   69 CONDITIONAL_STATEMENT: IF • ANY_EXPRESSION THEN BODY_OF_CONDITIONAL ELSE BODY_OF_CONDITIONAL SEMICOLON
   70                      | IF • ANY_EXPRESSION THEN BODY_OF_CONDITIONAL SEMICOLON

    NOT             shift, and go to state 47
    MINUS           shift, and go to state 48
    INT_NUMBER      shift, and go to state 49
    DECIMAL_NUMBER  shift, and go to state 50
    IDENTIFIER      shift, and go to state 51
    LPAREN          shift, and go to state 52

    ANY_EXPRESSION               go to state 53
    EXPRESSION_SEQUENCE          go to state 54
    BOOLEAN_EXPRESSION_SEQUENCE  go to state 55
    TERM                         go to state 56


State 23

  102 FOR_LOOP_TO: FOR • IDENTIFIER COLON EQUAL EXPRESSION_SEQUENCE TO EXPRESSION_SEQUENCE DO BODY_OF_LOOP SEMICOLON
  103 FOR_LOOP_DOWNTO: FOR • IDENTIFIER COLON EQUAL EXPRESSION_SEQUENCE DOWNTO EXPRESSION_SEQUENCE DO BODY_OF_LOOP SEMICOLON

    IDENTIFIER  shift, and go to state 57


State 24

  101 WHILE_LOOP: WHILE • ANY_EXPRESSION DO BODY_OF_LOOP SEMICOLON

    NOT             shift, and go to state 47
    MINUS           shift, and go to state 48
    INT_NUMBER      shift, and go to state 49
    DECIMAL_NUMBER  shift, and go to state 50
    IDENTIFIER      shift, and go to state 51
    LPAREN          shift, and go to state 52

    ANY_EXPRESSION               go to state 58
    EXPRESSION_SEQUENCE          go to state 54
    BOOLEAN_EXPRESSION_SEQUENCE  go to state 55
    TERM                         go to state 56


State 25

   38 READ_STATEMENT: READ • LPAREN IDENTIFIER RPAREN SEMICOLON
   39               | READ • LPAREN IDENTIFIER ARRAY_ADD_ON_ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 59


State 26

   40 WRITE_STATEMENT: WRITE • LPAREN WRITE_IDENTIFIER_LIST RPAREN SEMICOLON

    LPAREN  shift, and go to state 60


State 27

   41 WRITE_STATEMENT: WRITE_LN • LPAREN WRITE_IDENTIFIER_LIST RPAREN SEMICOLON

    LPAREN  shift, and go to state 61


State 28

   66 ASSIGNMENT_STATEMENT: IDENTIFIER • COLON EQUAL ANY_EXPRESSION SEMICOLON
   67                     | IDENTIFIER • ARRAY_ADD_ON_ID COLON EQUAL ANY_EXPRESSION SEMICOLON
   68                     | IDENTIFIER • COLON EQUAL CHARACTER SEMICOLON

    COLON     shift, and go to state 62
    LBRACKET  shift, and go to state 63

    ARRAY_ADD_ON_ID  go to state 64


State 29

   30 BODY_OF_PROGRAM: BEGINK STATEMENTS • END DOT

    END  shift, and go to state 65


State 30

   31 STATEMENTS: STATEMENT • STATEMENTS
   32           | STATEMENT •

    IF          shift, and go to state 22
    FOR         shift, and go to state 23
    WHILE       shift, and go to state 24
    READ        shift, and go to state 25
    WRITE       shift, and go to state 26
    WRITE_LN    shift, and go to state 27
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 32 (STATEMENTS)

    STATEMENTS             go to state 66
    STATEMENT              go to state 30
    READ_STATEMENT         go to state 31
    WRITE_STATEMENT        go to state 32
    ASSIGNMENT_STATEMENT   go to state 33
    CONDITIONAL_STATEMENT  go to state 34
    LOOPING_STATEMENT      go to state 35
    WHILE_LOOP             go to state 36
    FOR_LOOP_TO            go to state 37
    FOR_LOOP_DOWNTO        go to state 38


State 31

   33 STATEMENT: READ_STATEMENT •

    $default  reduce using rule 33 (STATEMENT)


State 32

   34 STATEMENT: WRITE_STATEMENT •

    $default  reduce using rule 34 (STATEMENT)


State 33

   35 STATEMENT: ASSIGNMENT_STATEMENT •

    $default  reduce using rule 35 (STATEMENT)


State 34

   36 STATEMENT: CONDITIONAL_STATEMENT •

    $default  reduce using rule 36 (STATEMENT)


State 35

   37 STATEMENT: LOOPING_STATEMENT •

    $default  reduce using rule 37 (STATEMENT)


State 36
